Fix logreader for dark mode

--- a/js/Components/LogTable.css
+++ b/js/Components/LogTable.css
@@ -5,7 +5,7 @@
   table-layout: fixed;
 
   th {
-    color: #888;
+    color: var(--color-text-maxcontrast);
   }
 
   td, th {
@@ -15,7 +15,7 @@
     font-weight: normal;
     position: relative;
     word-wrap: break-word;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid var(--color-border);
   }
 
   th.level.active .log-settings-toggle,
@@ -86,7 +86,7 @@
   }
 
   div.message {
-    border-bottom: 1px solid #888;
+    border-bottom: 1px solid var(--color-border);
   }
 
   td.copy, th.copy {
